[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "control-plane-kit-interpreters"
version = "0.1.0"
description = "Concrete runtime interpreters for Control Plane Kit"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenJ92" }
]
dependencies = [
  "control-plane-kit-core @ https://github.com/OpenJ92/control-plane-kit/archive/1c78f9584a0334446f468f98ba2a0b9505bb727f.zip#subdirectory=control-plane-kit-core",
]

[project.optional-dependencies]
docker = [
  "docker>=7.1",
  "httpx>=0.28",
  "psycopg[binary]>=3.2",
]
http = [
  "httpx>=0.28",
]
test = [
  "docker>=7.1",
  "httpx>=0.28",
  "psycopg[binary]>=3.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
control_plane_kit_interpreters = ["py.typed"]
